<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@id/input"
        android:layout_width="361dp"
        android:layout_height="136dp"
        android:layout_marginTop="56dp"
        android:layout_weight="1"
        android:autofillHints="false"
        android:baselineAligned="false"
        android:gravity="end|center"
        android:inputType="none"
        android:text="@string/display"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="10"
                android:background="@drawable/rectangle"
                android:onClick="numberEvent"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/twoBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="39dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="10"
                android:background="@drawable/rectangle"
                android:onClick="numberEvent"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/threeBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="34dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="10"
                android:background="@drawable/rectangle"
                android:onClick="numberEvent"
                android:text="@string/three"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/addBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="40"
                android:background="@drawable/rectangle"
                android:onClick="operatorEvent"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="10"
                android:background="@drawable/rectangle"
                android:onClick="numberEvent"
                android:text="@string/four"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/fiveBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="10"
                android:background="@drawable/rectangle"
                android:onClick="numberEvent"
                android:text="@string/five"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/sixBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="10"
                android:background="@drawable/rectangle"
                android:onClick="numberEvent"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/subtractBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="40"
                android:background="@drawable/rectangle"
                android:onClick="operatorEvent"
                android:text="@string/subtract"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="10"
                android:background="@drawable/rectangle"
                android:onClick="numberEvent"
                android:text="@string/seven"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/eightBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="10"
                android:background="@drawable/rectangle"
                android:onClick="numberEvent"
                android:text="@string/eight"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/nineBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="10"
                android:background="@drawable/rectangle"
                android:onClick="numberEvent"
                android:text="@string/nine"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/multiplyBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="40"
                android:background="@drawable/rectangle"
                android:onClick="operatorEvent"
                android:text="@string/multiply"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <Button
                android:id="@+id/pointBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="10"
                android:background="@drawable/rectangle"
                android:onClick="numberEvent"
                android:text="@string/point"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/zeroBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="10"
                android:background="@drawable/rectangle"
                android:onClick="numberEvent"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/clearBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="10"
                android:background="@drawable/rectangle"
                android:onClick="clearEvent"
                android:text="@string/clear"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/divideBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="40"
                android:background="@drawable/rectangle"
                android:onClick="operatorEvent"
                android:text="@string/divide"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>


    <Button
        android:id="@+id/equalBTN"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="366dp"
        android:layout_height="68dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="168dp"
        android:layout_weight="10"
        android:background="@drawable/rectangle"
        android:baselineAligned="false"
        android:onClick="equalEvent"
        android:text="@string/equal"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>